Fix show pages
- Make h1 include gov.uk location. Make the link inactive/unclickable if the document isn't published yet.
- Give sections h2 titles
- Make the document state a label as on index page
- Add a list for attachments
- Make h1 include gov.uk location. Make the link inactive/unclickable if the document isn't published yet.
- Remove 'sidebar' class (this doesn't appear to be used for anything)
- Add body in collapsable section. The body content on these is often very long so make it hidden by default. This allows editors to look at the body without having to open the 'edit' page
- Put page actions in a section at the bottom on the page. Display them inline.

--- a/app/assets/stylesheets/base.scss
+++ b/app/assets/stylesheets/base.scss
@@ -30,8 +30,36 @@
 @import "navbar";
 @import "manual_header";
 
-
 p.no-content-message {
   @include core-19;
   color: $grey-1;
+}
+
+.metadata-list {
+  width:100%;
+
+  dt {
+    float: left;
+    clear: left;
+    width:30%;
+  }
+  dd {
+    float: left;
+    width:70%;
+  }
+}
+
+.collapsable-heading a {
+  color: inherit;
+  small {
+    color: $link-color;
+  }
+}
+
+.page-header {
+  span.document-slug {
+    display:block;
+    color: $grey-1;
+    @include core-19;
+  }
 }
